src/components/landingPage/landingPageView.scss
@import 'include-media/dist/_include-media.scss';

.landingPage-view {
  opacity: 0.8;
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
    url('../../images/landingPageBackground2.png?size=1536');

  /* Set a specific height */
  min-height: 100vh;

  /* Create the parallax scrolling effect */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;

  @include media('<tablet') {
    background-attachment: initial;
    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
    url('../../images/landingPageBackground2.png?size=1024');
    height: 100%;
    width: 100%;
    position: absolute;
    object-fit: cover;
  }

  .animation {
    z-index: -5;
    opacity: 0;
    height: 100%;
    width: 100%;
    background-color: black;

    animation-duration: 4s;
    animation-delay: 0s;
    animation-timing-function: ease-out;
    animation-name: containerAnimation;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;

    &-withLogo {
      background-color: black;
      z-index: -500;
      opacity: 0;
      position: absolute;
      display: flex;
      align-items: center;
      justify-content: center;
      width: 100%;
      height: 100%;

      animation-duration: 4s;
      animation-delay: 1.5s;
      animation-timing-function: ease-out;
      animation-name: blackScreenAnimation;
      animation-iteration-count: 1;
      animation-fill-mode: forwards;

      &-logo {
        width: 120px;

        @include media('<tablet') {
          width: 50px;
        }
      }
    }
    &-background {
      height: 100%;
      width: 100%;
      position: absolute;
      z-index: 100;
      opacity: 0;
      object-fit: cover;

      animation-duration: 4s;
      animation-delay: 0s;
      animation-timing-function: ease-out;
      animation-name: backgroundImageAnimation;
      animation-iteration-count: 1;
      animation-fill-mode: forwards;
    }
  }
  .background {
    height: 100%;
    width: 100%;
    position: absolute;
    z-index: 1;
    opacity: 0.48;
    object-fit: cover;

    animation-duration: 4s;
    animation-delay: 0s;
    animation-timing-function: ease-out;
    animation-name: finalLandingScreen;
    animation-iteration-count: 1;
  }

  .association {
    &-container {
      display: flex;
      flex-direction: column;
      align-items: center;
      font-size: 20px;
      text-transform: uppercase;
      // Layout properties
      position: absolute;
      right: 8vw;
      top: 5vh;
      z-index: 2;

      animation-duration: 6s;
      animation-delay: 0s;
      animation-timing-function: ease-out;
      animation-name: hideOnAnimation;
      animation-iteration-count: 1;
      opacity: 1;

      @include media('<tablet') {
        top: 9vh;

        img {
          width: 60px;
        }
      }
    }

    &-text {
      color: #fff;
      font-family: 'BebasNeue';
      font-size: 12px;
      @include media('<tablet') {
        font-size: 8px;
      }
    }
  }
  .credits {
    &-container {
      bottom: 27vh;
      color: #fff;

      animation-duration: 6s;
      animation-delay: 0s;
      animation-timing-function: ease-out;
      animation-name: hideOnAnimation;
      animation-iteration-count: 1;
      opacity: 1;

      position: absolute;
      right: 8vw;
      text-align: right;
      text-transform: uppercase;
      z-index: 2;
      white-space: nowrap;

      // Overriding user agent stylesheet sizes for these
      // Prefer semantic markup for SEO implications
      h1,
      h2,
      h3 {
        font-size: 18px;
        margin-top: 0px;
        margin-bottom: 10px;
      }
    }
    &-text--bottom {
      padding-bottom: 25px;
      // These next two are hacky shiz for the partial border unerline
      float: right;
    }
    &-text-border {
      border-bottom: 3px solid #be1e2d;
      width: 52%;
      float: right;

      animation-name: landingPageAnimatedLine;
      animation-duration: 2s;
      animation-delay: 5.3s;

      @keyframes landingPageAnimatedLine {
        0% {
          width: 0%;
        }
        100% {
          width: 52%;
        }
      }
    }
    &-text {
      margin: 0;
    }
  }
  .header {
    animation-duration: 6s;
    animation-delay: 0s;
    animation-timing-function: ease-out;
    animation-name: hideOnAnimation;
    animation-iteration-count: 1;
    &-container {
      padding: 10vh 0 0 5vw;
      position: absolute;
      top: 0;
      z-index: 2;

      animation-duration: 6s;
      animation-delay: 0s;
      animation-timing-function: ease-out;
      animation-name: hideOnAnimation;
      animation-iteration-count: 1;
      opacity: 1;
    }
  }
  .movieTitle {
    &-container {
      color: grey;
      font-size: 120px;
      z-index: 2;
      // Layout properties
      position: absolute;
      bottom: 5vh;
      right: 8vw;
      margin: 0;
    }
    &-image {
      height: 164px;
      filter: opacity(30%);
      width: 925px;
      opacity: 1;

      animation-duration: 4.5s;
      animation-delay: 0s;
      animation-timing-function: ease-out;
      animation-name: textLogoAnimation;
      animation-iteration-count: 1;

      @include media('>=27em', '<=72em') {
        height: 134px;
        width: 725px;
      }

      @include media('<=tablet') {
        height: 73px;
        width: 300px;
      }
    }
  }
  .watchFilmCTA {
    // Stick it in the middle of the view
    position: absolute;
    top: 50%;
    left: 50%;
    // These properties help keep it centered
    height: 50px;
    margin-left: -50px; /* margin is -0.5 * dimension */
    margin-top: -25px; 

    color: #be1e2d;
    font-size: 48px;
    border-bottom: 3px solid #be1e2d;

    &:hover {
      cursor: pointer;
    }
  }
}

@keyframes containerAnimation {
  0% {
    opacity: 0;
    z-index: -5;
  }
  20% {
    opacity: 1;
    z-index: 999;
  }
  80% {
    opacity: 1;
    z-index: 999;
  }
  100% {
    opacity: 0;
    z-index: -5;
  }
}

@keyframes backgroundImageAnimation {
  0% {
    opacity: 1;
    z-index: 9999;
  }
  15% {
    opacity: 1;
    z-index: 9999;
  }
  70% {
    opacity: 1;
    z-index: 9999;
  }
  90% {
    opacity: 0;
    z-index: -5;
  }
  100% {
    z-index: -5;
    opacity: 0;
  }
}

@keyframes blackScreenAnimation {
  0% {
    z-index: -5;
    opacity: 0;
  }
  15% {
    z-index: 9999999;
    opacity: 1;
  }
  75% {
    z-index: 9999999;
    opacity: 1;
  }
  100% {
    z-index: -5;
    opacity: 0;
  }
}

@keyframes finalLandingScreen {
  0% {
    opacity: 0;
  }
  15% {
    opacity: 0;
  }
  85% {
    opacity: 0;
  }
  100% {
    opacity: 0.48;
  }
}

@keyframes hideOnAnimation {
  0% {
    opacity: 0;
    pointer-events: none;
  }
  90% {
    opacity: 0;
    pointer-events: none;
  }
  100% {
    opacity: 1;
    pointer-events: all;
  }
}

@keyframes textLogoAnimation {
  0% {
    opacity: 0;
  }
  85% {
    opacity: 0;
  }
  90% {
    opacity: 1;
  }
  100% {
    opacity: 1;
  }
}

